[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-omni-api"
version = "0.1.0"
authors = [{ name = "Anil Matcha" }]
description = "Python wrapper for the Gemini Omni API on muapi.ai — text-to-video, image-to-video, and video-edit."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests", "python-dotenv", "mcp[cli]"]

[tool.setuptools]
py-modules = ["gemini_omni_api", "mcp_server"]
